# function_list_vs_abtsract_interface

./: AppSettings.h  CMakeLists.txt  Readme.md  abtsract_class_interface.cpp  function_list_interface.cpp  gui_loop.h  image_with_counter.h  stateful_functions.h  with_interface.cpp  with_struct.cpp
